force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Ciudad correspondiente a la ubicación</description>
    <inlineHelpText>Ciudad correspondiente a la ubicación</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>