force-app/main/default/objects/Location__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>País correspondiente a la ubicación</description>
    <inlineHelpText>País correspondiente a la ubicación</inlineHelpText>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>