force-app/main/default/objects/Location__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Código Postal correspondiente a la ubicación</description>
    <inlineHelpText>Código Postal correspondiente a la ubicación</inlineHelpText>
    <label>Postal Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>