force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Estado correspondiente a la ubicación</description>
    <inlineHelpText>Estado correspondiente a la ubicación</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>