force-app/main/default/objects/Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Calle correspondiente a la ubicación</description>
    <inlineHelpText>Calle correspondiente a la ubicación</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>