force-app/main/default/objects/Location__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Expone si la ubicación esta verificada mediante callouts a la API SmartyStreets</description>
    <inlineHelpText>Indica si la ubicación esta verificada o no.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>